2001-03-11  Michael Yount <csf@moscow.com>

	* README.LINUX:  Describe a workaround for a MakeMaker module
	bug in some versions of linux.

	* lib/Mj/Token.pm:  (confirm)  Bugfix:  Testing the 'ackstall'
	flag could in some cases cause CONSULT notices not to be mailed.

2001-03-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  Version number is now 0.1200103090.
	(common_subs, et al.) Declare undeclared variables.
	(list_config_set_to_default) Bugfix:  correct the list variable name
	for the unknown_setting error.
	(report_start, _report) Bugfix: join and split values using \002
	in double, not single, quotes.
	(_showtokens) Add support for the alias token type, which is a way 
	to assign more than one token identifier to the same request.

	* lib/Mj/Access.pm:  (list_access_check)  Add support for the chain
	access variable, which determines whether confirmation notices are
	sent consecutively or simultaneously;  the expire variable, which
	determines the lifetime of a token; and the notify action, which
	changes the attributes of a token.
	(_a_conf_cons, et al.)  Adapt to use data from "notify" actions.
	(_a_replyfile)  Use a local symbol instead of a global filehandle
	for reading the reply file.

	* lib/Mj/Archive.pm:  (sync) Declare undeclared variable.
	(get_to_file)  Add file handle error checks.

	* lib/Mj/BounceHandler.pm:  (handle_bounce_token) Call
	Mj::Token::t_reject instead of t_remove, to account for potential
	alias tokens.

	* lib/Mj/BounceParser.pm:  (parse_dsn)  Cope with missing
	delivery-status parts.

	* lib/Mj/CommandProps.pm:  Add support for the "notify" action
	in the access rules.  Give access variables type names instead
	of type numbers.  Make the "mkdigest" command an alias for the
	digest command.  Add support for the showtokens-alias command.

	* lib/Mj/Config.pm:  (parse_access_rules)  Add support for the
	notify action, including validation of the variables names.
